Add etcd support for service registration and discovery across multiple services. Update configuration options to include etcd settings, enhance user service to register with etcd, and refactor related documentation. Additionally, update Go module dependencies to include new packages for etcd integration.

--- a/docs/dev/00-微服务架构设计.md
+++ b/docs/dev/00-微服务架构设计.md
@@ -30,6 +30,7 @@ graph TB
         MQ[RabbitMQ<br/>:5672]
         DB[(PostgreSQL<br/>:5432)]
         Redis[(Redis<br/>:6379)]
+        Etcd[(etcd<br/>:2379<br/>服务注册中心)]
     end
     
     Web -->|WebSocket| WS
@@ -51,6 +52,12 @@ graph TB
     MS --> DB
     PS --> Redis
     PS --> DB
+    
+    AS -.->|注册/发现| Etcd
+    US -.->|注册/发现| Etcd
+    MS -.->|注册/发现| Etcd
+    PS -.->|注册/发现| Etcd
+    WS -.->|服务发现| Etcd
 ```
 
 ## 微服务划分
@@ -92,6 +99,7 @@ graph TB
 - JWT
 - Redis（Token 缓存和黑名单）
 - gRPC Client（调用 User Service）
+- etcd（服务注册和发现）
 
 **端口**：50050
 
@@ -121,6 +129,7 @@ graph TB
 **技术栈**：
 - gRPC Server
 - GORM
+- etcd（服务注册）
 
 **端口**：50051
 
@@ -207,7 +216,7 @@ graph TB
 
 ### Gateway 到业务服务
 
-Gateway 通过 gRPC 调用业务服务：
+Gateway 通过 gRPC 调用业务服务，使用 etcd 服务发现：
 
 ```go
 // internal/gateway/grpc/client.go
@@ -219,8 +228,14 @@ type Client struct {
 }
 
 func NewClient(cfg *config.Config) (*Client, error) {
-    // 连接 Auth Service
-    authConn, err := grpc.Dial(cfg.GRPC.AuthServiceAddr, grpc.WithInsecure())
+    // 注册 etcd 解析器
+    resolver.Register(registry.NewResolverBuilder(cfg.Registry))
+    
+    // 使用 etcd 服务发现连接 Auth Service
+    authConn, err := grpc.NewClient(
+        "etcd://beehive-auth",
+        grpc.WithTransportCredentials(insecure.NewCredentials()),
+    )
     if err != nil {
         return nil, err
     }
@@ -236,12 +251,13 @@ func NewClient(cfg *config.Config) (*Client, error) {
 
 ### Auth Service 到 User Service
 
-Auth Service 在登录时调用 User Service 获取用户信息：
+Auth Service 在登录时调用 User Service 获取用户信息，通过 etcd 服务发现：
 
 ```go
 // Auth Service 登录流程
 func (s *Service) Login(ctx context.Context, req *pb.LoginRequest) (*pb.LoginResponse, error) {
     // 1. 调用 User Service 获取用户信息（包含密码哈希）
+    // User Service 客户端通过 etcd://beehive-user 自动发现服务
     userReq := &userpb.GetUserByIDRequest{Id: req.Id}
     userResp, err := s.userService.GetUserByID(ctx, userReq)
     if err != nil {
@@ -303,6 +319,42 @@ Auth Service → Gateway: 返回用户信息
 Gateway: 建立 WebSocket 连接
 ```
 
+## 服务注册与发现
+
+### etcd 服务注册中心
+
+系统使用 etcd 作为服务注册中心，实现服务自动注册和发现：
+
+- **服务注册**：服务启动时自动注册到 etcd
+- **服务发现**：通过服务名从 etcd 发现可用服务实例
+- **负载均衡**：使用轮询（Round Robin）策略选择服务实例
+- **健康检查**：通过 etcd 租约（Lease）机制实现自动健康检查
+
+### 服务注册格式
+
+etcd Key 格式：`/beehive/services/{service_name}/{instance_id}`
+
+服务信息（JSON）：
+```json
+{
+  "service_name": "beehive-auth",
+  "address": "localhost",
+  "port": 50050,
+  "instance_id": "auth-abc12345",
+  "metadata": {}
+}
+```
+
+### 服务发现使用
+
+gRPC 客户端使用 etcd 服务发现：
+```
+etcd://beehive-auth
+etcd://beehive-user
+etcd://beehive-message
+etcd://beehive-presence
+```
+
 ## 配置管理
 
 ### 配置文件示例
@@ -316,10 +368,13 @@ rabbitmq:
   url: amqp://guest:guest@localhost:5672/
 
 grpc:
-  auth_service_addr: localhost:50050
-  user_service_addr: localhost:50051
-  message_service_addr: localhost:50052
-  presence_service_addr: localhost:50053
+  bind-address: "0.0.0.0"
+  bind-port: 8080
+
+etcd:
+  endpoints: ["localhost:2379"]
+  dial-timeout: 5s
+  prefix: "/beehive/services"
 
 log:
   level: info
@@ -328,8 +383,9 @@ log:
 
 ```yaml
 # configs/auth-service.yaml
-server:
-  auth_service_port: 50050
+grpc:
+  bind-address: "0.0.0.0"
+  bind-port: 50050
 
 jwt:
   secret: your-secret-key-change-in-production
@@ -341,8 +397,13 @@ redis:
   password: ""
   db: 0
 
-grpc:
-  user_service_addr: localhost:50051
+etcd:
+  endpoints: ["localhost:2379"]
+  dial-timeout: 5s
+  prefix: "/beehive/services"
+
+user-service:
+  addr: "etcd://beehive-user"  # 使用 etcd 服务发现
 
 log:
   level: info
@@ -351,8 +412,9 @@ log:
 
 ```yaml
 # configs/user-service.yaml
-server:
-  user_service_port: 50051
+grpc:
+  bind-address: "0.0.0.0"
+  bind-port: 50051
 
 database:
   host: localhost
@@ -361,6 +423,11 @@ database:
   password: postgres
   dbname: beehive
   sslmode: disable
+
+etcd:
+  endpoints: ["localhost:2379"]
+  dial-timeout: 5s
+  prefix: "/beehive/services"
 
 log:
   level: info
@@ -380,7 +447,8 @@ log:
 - 每个服务独立部署
 - 使用 Kubernetes 或 Docker Swarm 编排
 - 使用配置中心管理配置
-- 实现服务发现和负载均衡
+- 使用 etcd 实现服务发现和负载均衡
+- etcd 集群部署（3节点或5节点）保证高可用
 
 ### 监控和日志
 
