--- a/docs/dev/04-完整开发指南.md
+++ b/docs/dev/04-完整开发指南.md
@@ -32,6 +32,7 @@ graph TB
         MQ[RabbitMQ<br/>消息队列]
         DB[(PostgreSQL<br/>数据库)]
         Redis[(Redis<br/>缓存)]
+        Etcd[(etcd<br/>服务注册中心)]
     end
     
     Web --> WS
@@ -47,6 +48,12 @@ graph TB
     US --> DB
     MS --> DB
     PS --> DB
+    
+    AS -.->|注册/发现| Etcd
+    US -.->|注册/发现| Etcd
+    MS -.->|注册/发现| Etcd
+    PS -.->|注册/发现| Etcd
+    WS -.->|服务发现| Etcd
 ```
 
 ### 微服务职责
@@ -60,13 +67,13 @@ graph TB
 #### 2. Auth Service
 - **职责**：用户登录、认证、JWT Token 生成和验证、权限验证
 - **端口**：50050 (gRPC)
-- **技术**：gRPC Server, JWT, Redis
+- **技术**：gRPC Server, JWT, Redis, etcd
 - **数据**：Redis（Token 缓存、黑名单）
 
 #### 3. User Service
 - **职责**：用户注册、用户信息管理
 - **端口**：50051 (gRPC)
-- **技术**：gRPC Server, GORM
+- **技术**：gRPC Server, GORM, etcd
 - **数据**：users 表
 
 #### 4. Message Service
