Update README and configuration files to enhance documentation and add health check settings for auth and user services. Expand development documentation to include Elasticsearch integration details and service architecture updates, ensuring comprehensive guidance for developers.

--- a/docs/dev/00-微服务架构设计.md
+++ b/docs/dev/00-微服务架构设计.md
@@ -24,6 +24,7 @@ graph TB
         US[User Service<br/>:50051<br/>用户数据管理]
         MS[Message Service<br/>:50052<br/>消息服务]
         PS[Presence Service<br/>:50053<br/>在线状态服务]
+        SS[Search Service<br/>:50054<br/>搜索服务]
     end
     
     subgraph Infrastructure["基础设施层"]
@@ -31,6 +32,7 @@ graph TB
         DB[(PostgreSQL<br/>:5432)]
         Redis[(Redis<br/>:6379)]
         Etcd[(etcd<br/>:2379<br/>服务注册中心)]
+        ES[(Elasticsearch<br/>:9200<br/>消息全文搜索)]
     end
     
     Web -->|WebSocket| WS
@@ -41,6 +43,7 @@ graph TB
     WS -->|gRPC| US
     WS -->|gRPC| MS
     WS -->|gRPC| PS
+    WS -->|gRPC| SS
     HTTP -->|gRPC| AS
     
     MS -->|Producer| MQ
@@ -50,13 +53,17 @@ graph TB
     AS -->|gRPC| US
     US --> DB
     MS --> DB
+    MS -->|异步索引| ES
     PS --> Redis
     PS --> DB
+    SS -->|全文搜索| ES
+    SS -->|获取详情| DB
     
     AS -.->|注册/发现| Etcd
     US -.->|注册/发现| Etcd
     MS -.->|注册/发现| Etcd
     PS -.->|注册/发现| Etcd
+    SS -.->|注册/发现| Etcd
     WS -.->|服务发现| Etcd
 ```
 
@@ -211,6 +218,37 @@ graph TB
 - `GetOnlineUsers(user_ids)` - 批量获取用户在线状态
 - `IsUserOnline(id)` - 检查用户是否在线
 - `GetUserPresence(id)` - 获取用户详细在线状态
+
+### 6. Search Service
+
+**职责**：
+- 消息全文搜索
+- 历史消息检索
+- 搜索结果高亮
+- 搜索统计和分析
+
+**技术栈**：
+- gRPC Server
+- Elasticsearch（消息索引和搜索）
+- GORM（可选，获取消息详情）
+- etcd（服务注册）
+
+**端口**：50054
+
+**数据**：
+- Elasticsearch（消息索引）
+- PostgreSQL（消息详情，可选）
+
+**特点**：
+- 专注于搜索功能
+- 高性能全文检索
+- 支持中文分词
+- 支持复杂查询（多字段、时间范围、消息类型）
+
+**关键 RPC**：
+- `SearchMessages(user_id, keyword, limit, offset)` - 搜索用户相关消息
+- `SearchUserMessages(user_id, target_user_id, keyword)` - 搜索两个用户之间的消息
+- `SearchGroupMessages(group_id, keyword)` - 搜索群组消息
 
 ## 服务间通信
 
@@ -434,6 +472,68 @@ log:
   format: json
 ```
 
+```yaml
+# configs/message-service.yaml
+grpc:
+  bind-address: "0.0.0.0"
+  bind-port: 50052
+
+database:
+  host: localhost
+  port: 5432
+  user: postgres
+  password: postgres
+  dbname: beehive
+  sslmode: disable
+
+rabbitmq:
+  url: amqp://guest:guest@localhost:5672/
+
+elasticsearch:
+  addresses:
+    - http://localhost:9200
+  index: beehive-messages
+  sync_enabled: true  # 启用消息同步到 Elasticsearch
+
+etcd:
+  endpoints: ["localhost:2379"]
+  dial-timeout: 5s
+  prefix: "/beehive/services"
+
+log:
+  level: info
+  format: json
+```
+
+```yaml
+# configs/search-service.yaml
+grpc:
+  bind-address: "0.0.0.0"
+  bind-port: 50054
+
+elasticsearch:
+  addresses:
+    - http://localhost:9200
+  index: beehive-messages
+
+database:
+  host: localhost
+  port: 5432
+  user: postgres
+  password: postgres
+  dbname: beehive
+  sslmode: disable
+
+etcd:
+  endpoints: ["localhost:2379"]
+  dial-timeout: 5s
+  prefix: "/beehive/services"
+
+log:
+  level: info
+  format: json
+```
+
 ## 部署建议
 
 ### 开发环境
@@ -472,3 +572,4 @@ log:
 - [用户登录与操作逻辑](./01-用户登录与操作逻辑.md)
 - [Auth 认证架构设计](./02-Auth认证架构设计.md)
 - [消息队列设计](./03-消息队列设计.md)
+- [Elasticsearch 搜索架构设计](./05-Elasticsearch搜索架构设计.md)
