--- a/docs/dev/04-完整开发指南.md
+++ b/docs/dev/04-完整开发指南.md
@@ -88,6 +88,12 @@ graph TB
 - **技术**：gRPC Server, Redis
 - **数据**：Redis (在线状态缓存)
 
+#### 6. Search Service
+- **职责**：消息全文搜索、历史消息检索、搜索结果高亮
+- **端口**：50054 (gRPC)
+- **技术**：gRPC Server, Elasticsearch, etcd
+- **数据**：Elasticsearch (消息索引)
+
 ## 开发阶段概览
 
 ```mermaid
@@ -108,10 +114,14 @@ gantt
     section 消息队列
     RabbitMQ集成     :d1, after c2, 3d
     消息路由          :d2, after d1, 2d
+    section Elasticsearch
+    ES集成            :e1, after d2, 2d
+    消息索引同步      :e2, after e1, 2d
+    搜索服务实现      :e3, after e2, 2d
     section 测试优化
-    单元测试          :e1, after d2, 3d
-    集成测试          :e2, after e1, 2d
-    性能优化          :e3, after e2, 2d
+    单元测试          :f1, after e3, 3d
+    集成测试          :f2, after f1, 2d
+    性能优化          :f3, after f2, 2d
 ```
 
 ## 阶段一：项目基础搭建（第1-4天）
@@ -210,6 +220,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - beehive
 
   rabbitmq:
     image: rabbitmq:3-management-alpine
@@ -222,6 +234,8 @@ services:
       - "15672:15672" # 管理界面
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
+    networks:
+      - beehive
 
   redis:
     image: redis:7-alpine
@@ -230,11 +244,61 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    networks:
+      - beehive
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
+    container_name: beehive-elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    volumes:
+      - es_data:/usr/share/elasticsearch/data
+    networks:
+      - beehive
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.11.0
+    container_name: beehive-kibana
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
+    networks:
+      - beehive
+
+  etcd:
+    image: quay.io/coreos/etcd:v3.5.11
+    container_name: beehive-etcd
+    environment:
+      - ETCD_NAME=etcd0
+      - ETCD_ADVERTISE_CLIENT_URLS=http://0.0.0.0:2379
+      - ETCD_LISTEN_CLIENT_URLS=http://0.0.0.0:2379
+    ports:
+      - "2379:2379"
+      - "2380:2380"
+    volumes:
+      - etcd_data:/etcd-data
+    networks:
+      - beehive
 
 volumes:
   postgres_data:
   rabbitmq_data:
   redis_data:
+  es_data:
+  etcd_data:
+
+networks:
+  beehive:
+    driver: bridge
 ```
 
 ## 阶段二：Protocol Buffers 定义（第5-6天）
@@ -319,19 +383,288 @@ chmod +x scripts/generate-proto.sh
 
 参考 [消息队列设计](./03-消息队列设计.md) 文档实现。
 
-## 阶段六：测试和优化（第22-30天）
+## 阶段六：Elasticsearch 集成（第22-27天）
 
-### 6.1 单元测试
+### 6.1 安装 IK 中文分词插件
+
+```bash
+# 进入 Elasticsearch 容器
+docker exec -it beehive-elasticsearch bash
+
+# 安装 IK 分词插件
+elasticsearch-plugin install https://github.com/medcl/elasticsearch-analysis-ik/releases/download/v8.11.0/elasticsearch-analysis-ik-8.11.0.zip
+
+# 重启容器
+docker restart beehive-elasticsearch
+```
+
+### 6.2 创建消息索引
+
+```bash
+# 使用 curl 创建索引
+curl -X PUT "http://localhost:9200/beehive-messages" -H 'Content-Type: application/json' -d'
+{
+  "settings": {
+    "number_of_shards": 3,
+    "number_of_replicas": 1,
+    "analysis": {
+      "analyzer": {
+        "ik_max_word_analyzer": {
+          "type": "custom",
+          "tokenizer": "ik_max_word"
+        },
+        "ik_smart_analyzer": {
+          "type": "custom",
+          "tokenizer": "ik_smart"
+        }
+      }
+    }
+  },
+  "mappings": {
+    "properties": {
+      "message_id": { "type": "keyword" },
+      "type": { "type": "keyword" },
+      "from_id": { "type": "keyword" },
+      "to_id": { "type": "keyword" },
+      "group_id": { "type": "keyword" },
+      "content": {
+        "type": "text",
+        "analyzer": "ik_max_word_analyzer",
+        "search_analyzer": "ik_smart_analyzer",
+        "fields": {
+          "keyword": {
+            "type": "keyword",
+            "ignore_above": 256
+          }
+        }
+      },
+      "message_type": { "type": "keyword" },
+      "status": { "type": "keyword" },
+      "created_at": {
+        "type": "date",
+        "format": "epoch_second"
+      },
+      "updated_at": {
+        "type": "date",
+        "format": "epoch_second"
+      }
+    }
+  }
+}
+'
+```
+
+### 6.3 实现 Elasticsearch 客户端
+
+```go
+// internal/pkg/elasticsearch/client.go
+package elasticsearch
+
+import (
+    "bytes"
+    "context"
+    "encoding/json"
+    "fmt"
+    "github.com/elastic/go-elasticsearch/v8"
+    "github.com/elastic/go-elasticsearch/v8/esapi"
+)
+
+type Client struct {
+    es *elasticsearch.Client
+}
+
+func NewClient(addresses []string) (*Client, error) {
+    cfg := elasticsearch.Config{
+        Addresses: addresses,
+    }
+    
+    es, err := elasticsearch.NewClient(cfg)
+    if err != nil {
+        return nil, err
+    }
+    
+    return &Client{es: es}, nil
+}
+
+func (c *Client) IndexMessage(ctx context.Context, message *model.Message) error {
+    doc := map[string]interface{}{
+        "message_id":   message.ID,
+        "type":         message.Type,
+        "from_id":      message.FromID,
+        "to_id":        message.ToID,
+        "group_id":     message.GroupID,
+        "content":      message.Content,
+        "message_type": message.MessageType,
+        "status":       message.Status,
+        "created_at":   message.CreatedAt.Unix(),
+        "updated_at":   message.UpdatedAt.Unix(),
+    }
+    
+    var buf bytes.Buffer
+    if err := json.NewEncoder(&buf).Encode(doc); err != nil {
+        return err
+    }
+    
+    req := esapi.IndexRequest{
+        Index:      "beehive-messages",
+        DocumentID: message.ID,
+        Body:       &buf,
+        Refresh:    "true",
+    }
+    
+    res, err := req.Do(ctx, c.es)
+    if err != nil {
+        return err
+    }
+    defer res.Body.Close()
+    
+    if res.IsError() {
+        return fmt.Errorf("error indexing document: %s", res.String())
+    }
+    
+    return nil
+}
+```
+
+### 6.4 在 Message Service 中集成 Elasticsearch
+
+```go
+// internal/beehive-message/service/service.go
+func (s *Service) SendMessage(ctx context.Context, req *pb.SendMessageRequest) (*pb.SendMessageResponse, error) {
+    // 1. 保存消息到数据库
+    message := &model.Message{
+        ID:          id.GenID(),
+        Type:        "single",
+        FromID:      req.FromId,
+        ToID:        req.ToId,
+        Content:     req.Content,
+        MessageType: req.MessageType,
+        Status:      "sent",
+        CreatedAt:   time.Now(),
+        UpdatedAt:   time.Now(),
+    }
+    
+    if err := s.store.CreateMessage(ctx, message); err != nil {
+        return nil, err
+    }
+    
+    // 2. 异步索引到 Elasticsearch
+    go func() {
+        if err := s.esClient.IndexMessage(context.Background(), message); err != nil {
+            log.Printf("Failed to index message to ES: %v", err)
+        }
+    }()
+    
+    // 3. 发布到 RabbitMQ
+    if err := s.producer.PublishSingleChatMessage(req.ToId, message); err != nil {
+        return nil, err
+    }
+    
+    return &pb.SendMessageResponse{
+        MessageId: message.ID,
+        CreatedAt: message.CreatedAt.Unix(),
+    }, nil
+}
+```
+
+### 6.5 实现 Search Service
+
+参考 [Elasticsearch 搜索架构设计](./05-Elasticsearch搜索架构设计.md) 文档实现 Search Service。
+
+**关键步骤**：
+1. 创建 `pkg/api/proto/search/v1/search.proto`
+2. 实现 `internal/beehive-search/service/service.go`
+3. 创建 `cmd/beehive-search/main.go`
+4. 添加配置文件 `configs/beehive-search-example.yaml`
+
+### 6.6 测试搜索功能
+
+```bash
+# 启动 Search Service
+go run cmd/beehive-search/main.go
+
+# 使用 grpcurl 测试搜索
+grpcurl -plaintext -d '{
+  "user_id": "user_001",
+  "keyword": "你好",
+  "limit": 10,
+  "offset": 0
+}' localhost:50054 search.v1.SearchService/SearchMessages
+```
+
+### 6.7 批量同步历史数据
+
+创建批量同步工具：
+
+```go
+// cmd/tools/sync-to-es/main.go
+package main
+
+import (
+    "context"
+    "log"
+)
+
+func main() {
+    // 连接数据库
+    db := connectDB()
+    
+    // 连接 Elasticsearch
+    esClient := connectES()
+    
+    // 分页查询消息
+    offset := 0
+    batchSize := 1000
+    
+    for {
+        messages, err := db.GetMessages(offset, batchSize)
+        if err != nil {
+            log.Fatal(err)
+        }
+        
+        if len(messages) == 0 {
+            break
+        }
+        
+        // 批量索引
+        if err := esClient.BulkIndexMessages(messages); err != nil {
+            log.Printf("Failed to bulk index: %v", err)
+        }
+        
+        offset += batchSize
+        log.Printf("Synced %d messages", offset)
+    }
+    
+    log.Println("Sync completed!")
+}
+```
+
+运行同步：
+
+```bash
+go run cmd/tools/sync-to-es/main.go
+```
+
+## 阶段七：测试和优化（第28-36天）
+
+### 7.1 单元测试
 
 为每个服务编写单元测试。
 
-### 6.2 集成测试
+### 7.2 集成测试
 
 编写端到端的集成测试。
 
-### 6.3 性能优化
+### 7.3 性能优化
 
 优化性能瓶颈，添加缓存和连接池。
+
+### 7.4 Elasticsearch 性能优化
+
+- 调整分片和副本数量
+- 配置批量索引
+- 优化搜索查询
+- 配置索引生命周期管理（ILM）
 
 ## 每日开发检查清单
 
@@ -371,16 +704,29 @@ chmod +x scripts/generate-proto.sh
 - [ ] Exchange 和 Queue 配置
 - [ ] 消息路由测试
 
-### 第17-20天：功能完善
+### 第17-19天：Elasticsearch 集成
+- [ ] 安装 IK 分词插件
+- [ ] 创建消息索引
+- [ ] Elasticsearch 客户端实现
+- [ ] Message Service 集成 ES
+
+### 第20-22天：Search Service
+- [ ] Proto 定义
+- [ ] 搜索服务实现
+- [ ] 搜索功能测试
+- [ ] 历史数据同步
+
+### 第23-26天：功能完善
 - [ ] 离线消息处理
 - [ ] 群聊功能
 - [ ] 在线状态
 - [ ] 错误处理
 
-### 第21-25天：测试和优化
+### 第27-32天：测试和优化
 - [ ] 单元测试
 - [ ] 集成测试
 - [ ] 性能优化
+- [ ] Elasticsearch 性能优化
 - [ ] 文档完善
 
 ## 常见问题排查
@@ -410,10 +756,11 @@ chmod +x scripts/generate-proto.sh
 完成基础功能后，可以考虑：
 1. 添加文件上传功能
 2. 实现消息撤回
-3. 添加消息搜索
-4. 实现消息加密
-5. 添加管理后台
-6. 实现分布式部署
+3. 实现消息加密
+4. 添加管理后台
+5. 实现分布式部署
+6. 添加更多搜索功能（图片搜索、文件搜索等）
+7. 实现搜索结果聚合统计
 
 ## 参考文档
 
@@ -421,3 +768,4 @@ chmod +x scripts/generate-proto.sh
 - [用户登录与操作逻辑](./01-用户登录与操作逻辑.md)
 - [Auth 认证架构设计](./02-Auth认证架构设计.md)
 - [消息队列设计](./03-消息队列设计.md)
+- [Elasticsearch 搜索架构设计](./05-Elasticsearch搜索架构设计.md)
